syntax = "proto3";

package file;

option go_package = "github.com/yahn1ukov/scribble/proto/file";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message File {
    string id = 1;
    string name = 2;
    int64 size = 3;
    string content_type = 4;
    google.protobuf.Timestamp created_at = 5;
}

message UploadFileRequest {
    string note_id = 1;
    string name = 2;
    int64 size = 3;
    string content_type = 4;
    bytes content = 5;
}

message ListFilesRequest {
    string note_id = 1;
}

message ListFilesResponse {
    repeated File files = 1;
}

message DownloadFileRequest {
    string id = 1;
    string note_id = 2;
}

message DownloadFileResponse {
    string name = 1;
    string content_type = 2;
    bytes content = 3;
}

message RemoveFileRequest {
    string id = 1;
    string note_id = 2;
}

service FileService {
    rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
    rpc UploadFile(UploadFileRequest) returns (google.protobuf.Empty);
    rpc UploadAllFiles(stream UploadFileRequest) returns (google.protobuf.Empty);
    rpc DownloadFile(DownloadFileRequest) returns (DownloadFileResponse);
    rpc RemoveFile(RemoveFileRequest) returns (google.protobuf.Empty);
}
